# weather_tracker

./: .gitignore  CMakeLists.txt  README.md
include/: convertKelvinToCelsius.h  printWeatherData.h
include/functions/: getWeatherData.h  parseWeatherData.h
src/: convertKelvinToCelsius.cpp  main.cpp  printWeatherData.cpp
src/functions/: convertKelvinToCelsius.cpp  getWeatherData.cpp  parseWeatherData.cpp  printWeatherData.cpp
